--- a/assets/styles/button.scss
+++ b/assets/styles/button.scss
@@ -1,18 +1,27 @@
 .b-act {
-  padding: 10px 10px;
+  padding: 10px 3px;
   background-color: #ff6a00;
   color: #fff;
-  border-radius: 30px;
+  border-radius: 10px;
   display: block;
   text-align: center;
+  text-decoration: none;
 }
 
 .b-act-s {
-  padding: 10px 10px;
+  padding: 10px 3px;
   border: solid #ff6a00 1px;
   color: #ff6a00;
-  border-radius: 30px;
+  border-radius: 10px;
   display: block;
   text-align: center;
   display: block;
+  text-decoration: none;
+}
+
+.bo-top {
+  border-top: 1px solid #d5d8db;
+}
+.bo-b {
+  border-bottom: 1px solid #d5d8db;
 }
