--- a/assets/styles/slideshows.css
+++ b/assets/styles/slideshows.css
@@ -9,3 +9,18 @@
 img.product-active {
   opacity: 1;
 }
+
+/* page affiche produits*/
+
+.wrapper-code {
+  border: 1px solid #d5d8db;
+  border-radius: 10px;
+}
+.wrapper-avantage {
+  border: 1px solid #f6f7f8;
+  background-color: #f6f7f8;
+  border-radius: 10px;
+}
+.wrapper-code h3 {
+  color: #333;
+}
