--- a/templates/akab/article.html.twig
+++ b/templates/akab/article.html.twig
@@ -6,10 +6,10 @@
 
 <div class="">
     <h1>CREATION D'ARTICLE</h1>
-    {{form_start(formArticle)}}
-    {{ form_widget(formArticle) }}
+    {{form_start(formProduct)}}
+    {{ form_widget(formProduct) }}
 
-    {{form_end(formArticle)}}
+    {{form_end(formProduct)}}
         
 </div>
 {% endblock %}
