--- a/templates/akab/index.html.twig
+++ b/templates/akab/index.html.twig
@@ -23,14 +23,14 @@
         <h2 class='pb-3 title-article'>Produits les plus consultés</h2>
         <div class="row mi-h">
 
-        {%for article in articles %}
+        {%for product in products %}
          {# <!-- /card simple-->  #}
          
         <div class="card1 col-6 col-lg-3 col-md-3 col-sm-4" style="max-width:300px" >
-        <a href="{{ path('show', {'id' :article.id} )}}">
-          <img src="{{article.imagelink1}}"   class="card-img-top rounded"  style="width: 100%" alt="...">
+        <a href="{{ path('show', {'id' :product.id} )}}">
+          <img src="/images/products/{{product.image}}" class="card-img-top rounded"  style="width: 100%" alt="...">
           <div class="card-body">
-            <h5 class="card-name">{{article.name}}</h5>
+            <h5 class="card-name">{{product.name}}</h5>
             <p class="card-shop">free spirit</p>
             <ul class="rating">
               <span><i class="fas fa-star start_co"></i></span>
@@ -39,7 +39,7 @@
               <span><i class="fas fa-star start_co"></i></span>
              
             </ul>
-            <div class="card-price"><span class=''>5{{article.price}}</span></div>
+            <div class="card-price"><span class=''>5{{product.price}} F CFA</span></div>
             
           </div>
               </a>
@@ -64,13 +64,13 @@
       <h2 class='text-center pb-3 '>Notre selections pour vous</h2>
          
          <div class="row d-flex justify-content-between">
-       {%for article in articles %}
+       {%for product in products %}
            {# <!-- card simple-->  #}
           <div class="card3 col-6 col-lg-4 col-md-3 col-sm-4 mb-3">
-            <a href="{{ path('show', {'id' :article.id} )}}">
-             <img src="https://picsum.photos/640/360" class='card-img-top'style="height:80%; width: 100%"alt="">
+            <a href="{{ path('show', {'id' :product.id} )}}">
+             <img src="/images/products/{{product.image}}" class='card-img-top'style="height:80%; width: 100%"alt="">
              <div class="card3-name">
-               <p class="text-center">{{article.name}}</p>
+               <p class="text-center">{{product.name}}</p>
              </div>
             </a>
           </div>
@@ -113,16 +113,7 @@
           
 
       </div>
-  <footer class='mt-3 container-fluid footer_contain'>
-      <div class="row px-4 py-4 d-flex justify-content-betwee">
-        <div class="col text-center">ACHETER</div>
-        <div class="col text-center">VENDRE</div>
-        <div class="col text-center">A PROPOS DE NOUS</div>
-        <div class="col text-center">AIDE</div>
-
-      </div>
-  <div><p class='text-center'>Akabnam copyright 2022</p></div>
-  </footer>
+ 
  
 {% endblock %}
  
