--- a/templates/akab/showShop.html.twig
+++ b/templates/akab/showShop.html.twig
@@ -3,7 +3,8 @@
 {% block title %}page boutique{% endblock %}
 {% block body %}
 <div class="container-fluid ">
-    <div class="row bannershop"></div>
+    <div class="row bannershop">
+    <img src="/images/products/{{shop.imageBanner}}" height: class='rounded' alt="#" /></div>
 
    {# end of container #} 
 </div>
@@ -12,10 +13,10 @@
 <div class="col-4">
     <div class="row">
    <div class="col-4">
-       <img src="https://picsum.photos/100/100" class='rounded' alt="#" />
+       <img src="/images/products/{{shop.imageProfil}}" class='card-img rounded profil' alt="#" />
    </div>
    <div class="col-6">
-       <h6>Akabnam shop</h6>
+       <h6>{{shop.nameshop}}</h6>
        <p>localisation</p>
        <p>
         <ul class="rating">
@@ -23,7 +24,6 @@
             <span><i class="fas fa-star start_co"></i></span>
             <span><i class="fas fa-star start_co"></i></span>
             <span><i class="fas fa-star start_co"></i></span>
-           
           </ul>
        </p>
 
@@ -33,7 +33,7 @@
 
 </div>
 <div class="col-6">
-    <p>description de la boutique akabnam: solution de vente en ligne pour commerçant</p>
+    <p>{{ shop.description|raw }}</p>
 </div>
 <div class="col-2 text-right">
     <div>
@@ -47,7 +47,7 @@
 {#affiche article#}
 <div class="container mt-5">
 <div class="row">
- <div class="col-md-4">
+ <div class="col-md-2">
       <h2>produits</h2>
       <ul>
           <li>chaussure</li>
@@ -56,7 +56,7 @@
           <li></li>
       </ul>
  </div>
- <div class="col-md-8">
+ <div class="col-md-10">
      <div class="row  d-flex justify-content-between">
         <div class="card3 col-6 col-lg-4 col-md-3 col-sm-4 mb-3">
             <a href="">
