--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Bienvenue sur Akabnam{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://kit.fontawesome.com/2e22c8f32b.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
   <div class="container ">
     <div class="row pt-3">
       <div class="col-md-2 col-2">
-        <a class="navbar-brand orange">AKABNAM</a>
+        <a class="navbar-brand orange" href="{{path('home')}}">AKABNAM</a>
       </div>
       <div class="col-lg-6 d-none d-md-none d-sm-none d-lg-block">
         <form class="d-flex">
@@ -59,20 +59,20 @@
           <div class="collapse navbar-collapse ml-4 " id="navbarTogglerDemo02">
             <ul class="navbar-nav justify-content-center">
               <li class="nav-item">
-                <a class="nav-link orange" aria-current="page"  href="#">Decouverte</a>
+                <a class="nav-link orange" aria-current="page"  href="">Decouverte</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Promotion</a>
+                <a class="nav-link text-white" href="">Promotion</a>
               </li>
              
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Bien-être</a>
+                <a class="nav-link text-white" href="">Bien-être</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Shopping</a>
+                <a class="nav-link text-white" href="">Shopping</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Restaurant</a>
+                <a class="nav-link text-white" href="">Restaurant</a>
               </li>
             </ul>
         </div>
@@ -82,6 +82,16 @@
     </div>
       {#--------------- end menu-------------------------- #}
         {% block body %}{% endblock %}
+  <footer class='mt-3 container-fluid footer_contain'>
+      <div class="row px-4 py-4 d-flex justify-content-betwee">
+        <div class="col text-center"><a href="{{path('about')}}">ACHETER</a> </div>
+        <div class="col text-center"><a href="{{path('about')}}">VENDRE</a></div>
+        <div class="col text-center"><a href="{{path('about')}}">A PROPOS DE NOUS</a></div>
+        <div class="col text-center"><a href="{{path('about')}}">AIDE</a></div>
+
+      </div>
+  <div><p class='text-center'>Akabnam copyright 2022</p></div>
+  </footer>
     </body>
    
 </html>
