--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,82 +16,12 @@
         {% endblock %}
     </head>
     <body>
-    <div class="container-fluid bg-green">
-  <div class="container ">
-    <div class="row pt-3">
-      <div class="col-md-2 col-2">
-        <a class="navbar-brand orange" href="{{path('home')}}">AKABNAM</a>
-      </div>
-      <div class="col-lg-6 d-none d-md-none d-sm-none d-lg-block">
-        <form class="d-flex">
-          <input class="form-control me-2 roun" type="search" placeholder="Que cherchez-vous?" aria-label="Search">
-          <button class="btn btn-outline-success orange" type="submit"><i class="fas fa-search"></i></button>
-        </form>
-      </div>
-      <div class="col-md-6 col-lg-4 col-9 offset-xs-2">
-        <ul class='nav' >
-        <li class="nav-item">
-          <a class="nav-link">Proposer votre service</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link ">Connexion</a>
-        </li>
-      </ul>
-      </div>
-    </div>
-
-  </div>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-           <span class='white'><i class="fas fa-bars"></i></span> 
-          </button>
-          <div class="col-md-11 col-10 d d-md-block d-lg-none">
-          <form class="d-flex form-control-lg">
-            <input class="form-control me-2 roun" type="search" placeholder="Que cherchez-vous?" aria-label="Search">
-            
-            <button class="btn btn-outline-success" type="submit"><i class="fas fa-search orange"></i></button>
-            
-          </form>
-        </div>
-
-        <div class="col-md-6 col-12 offset-md-4">
-          <div class="collapse navbar-collapse ml-4 " id="navbarTogglerDemo02">
-            <ul class="navbar-nav justify-content-center">
-              <li class="nav-item">
-                <a class="nav-link orange" aria-current="page"  href="">Decouverte</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="">Promotion</a>
-              </li>
-             
-              <li class="nav-item">
-                <a class="nav-link text-white" href="">Bien-être</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="">Shopping</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="">Restaurant</a>
-              </li>
-            </ul>
-        </div>
-          </div>
-        </div>
-      </nav>
-    </div>
-      {#--------------- end menu-------------------------- #}
-        {% block body %}{% endblock %}
-  <footer class='mt-3 container-fluid footer_contain'>
-      <div class="row px-4 py-4 d-flex justify-content-betwee">
-        <div class="col text-center"><a href="{{path('about')}}">ACHETER</a> </div>
-        <div class="col text-center"><a href="{{path('about')}}">VENDRE</a></div>
-        <div class="col text-center"><a href="{{path('about')}}">A PROPOS DE NOUS</a></div>
-        <div class="col text-center"><a href="{{path('about')}}">AIDE</a></div>
-
-      </div>
-  <div><p class='text-center'>Akabnam copyright 2022</p></div>
-  </footer>
+      {% include "baseElements/navbar.html.twig" %}
+{#--------------- end of menu-------------------------- #}
+      {% block body %}{% endblock %}
+          
+      {% include "baseElements/footer.html.twig" %}
+{#--------------- end of footer-------------------------- #}
     </body>
    
 </html>
