--- a/templates/security/index.html.twig
+++ b/templates/security/index.html.twig
@@ -1,7 +1,30 @@
 {% extends 'base.html.twig' %}
+{% form_theme form 'bootstrap_5_layout.html.twig' %}
 
-{% block title %}login{% endblock %}
+{% block title %}{% endblock %}
 
 {% block body %}
-
+<style>
+    
+</style>
+<div class= "container-fluid">
+<div class= "container">
+<div class="col-md-6 ml-3 mx-auto">
+<h1> Inscription</h1>
+{{form_start(form)}}
+{{form_row(form.name,{'label':"Nom d\'utilisateur",
+ "attr":{'placeholder':"Nom d\'utilisateur"}})}}
+ {{form_row(form.email,{'label':"Adrese Email",
+ "attr":{'placeholder':"email"}})}}
+ {{form_row(form.phone,{'label':"Telephone",
+ "attr":{'placeholder':"Telephone"}})}}
+ {{form_row(form.password,{'label':"PasswordMot de passe",
+ "attr":{'placeholder':"Mot de passe"}})}}
+{{form_row(form.confirmPassword,{'label':"Confirmer le mot de passe",
+ "attr":{'placeholder':"Confirmer le mot de passe"}})}}
+<button type="submit"  class="btn btn-success" >Inscription</button>
+</div>
+</div>
+</div>
+{{form_end(form)}}
 {% endblock %}
